gccida/g0/output_constant_def_contents
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_constant_def_contents/src/varasm.c:3918:31: error: use of undeclared identifier 'machine_mode'
mergeable_constant_section( ( machine_mode)LOBYTE( exp->block.supercontext), align, 0); 
                              ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_constant_def_contents/src/obj/varasm.o] Error 1
